--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,7 @@ html {
     display: block;
 	margin: 10px 0;
 	border-radius: 10px;
-	background-color: rgba(39, 29, 46, 0.8);
+	background-color: rgb(83, 79, 74, 0.6);
 	padding: 10px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 	color: #fff;
