1. css파일 재 커밋
경로를 잘못 커밋해서 잘못 커밋한 파일삭제 후 재 커밋

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Grandstander');
+@import url('https://fonts.googleapis.com/css?family=Grandstander&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
 
 body {
+    font-family: 'Grandstander', cursive;
     height:100%;
 	background-image: url("../img/back.png");
 	background-position: center;
@@ -107,10 +109,33 @@ html {
     margin-right: 7px;
 }
 
-.button-sm {
-	display: inline-block;
-	width: 5%;
-	text-align: center;
-	cursor: pointer;
-	border-radius: 20%;
+.menuBtn {
+    background-color: transparent;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 5px 10px;
+}
+
+.menuBtn:focus {
+    background-color: rgb(171 160 148);
+    color: rgba(255, 255, 255);
+}
+
+/*about*/
+.about-title {
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    padding-top: 50px;
+    font-size: 65px;
+}
+
+@media screen and (max-width: 512px) { 
+    .about-title {
+        font-size: 35px; 
+    } 
+}
+
+.about-content {
+    font-family: 'Gamja Flower', cursive !important;
 }
