--- a/assets/css/side-menu.css
+++ b/assets/css/side-menu.css
@@ -1,14 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Grandstander');
 
-html {
-    height:100%;
-    z-index: 100;    
+.side {
+    float: left;
 }
 
-.side-nav {
+.about-main, .carrer-main, .project-main, .skill-main{
+    float: right !important;
+}
+
+.side-menu {
 	background-color: rgba(180, 169, 156);
+    height:100%;
+    width: 300px;
+    position:fixed!important;
+    z-index:1;
+    overflow:auto
 }
 
+.side-menu button {
+    background-color: transparent;
+    border: 0px;
+    padding-top: 10px;
+    margin-right: 15PX;
+    float: right;
+    color: rgb(83 78 72);
+    
+}
 .side-top {
     text-align: center;
     padding: 30px;
@@ -42,6 +59,19 @@ html {
 }
 
 .side-content li:hover {
-    font-family: 'Grandstander', cursive;
-    background-color: rgba(180, 169, 156, 0.5);
+    background-color: rgb(171 160 148);
+}
+
+.side-content li>a {
+    color: rgb(83 78 72);
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 32px;
+}
+
+.side-content li>a>i {
+    margin-right: 32px;
 }
