--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Grandstander&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
 body {
     font-family: 'Grandstander', cursive;
@@ -121,6 +122,11 @@ html {
     color: rgba(255, 255, 255);
 }
 
+.hangle {
+    font-family: 'Poor Story', cursive;
+    font-size: 30px;
+}
+
 /*about*/
 .about-title {
     width: 100%;
@@ -135,7 +141,44 @@ html {
         font-size: 35px; 
     } 
 }
+.about-top{
+    width: 120%;    
+}
 
 .about-content {
     font-family: 'Gamja Flower', cursive !important;
+}
+
+.about-image {
+    text-align: center;
+    
+}
+
+.about-image img{
+    width: 170px;
+    height: 220px;
+}
+
+.about-name{
+    height: 200px;
+    display: table-cell;
+    vertical-align: bottom;
+    padding-left: 10px;
+    text-align: center;
+}
+
+.out-box{
+    margin: 30px 0;
+    
+}
+
+.in-box{
+    background-color: #ffffff80;
+    height: 150px;
+    border-radius: 25px;
+    padding: 30px;
+}
+
+.in-box i {
+    font-size: 40px;
 }
